# nervaluate

./: .gitchangelog.rc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  compare_versions.py  coverage.yml  pylint.cfg  pyproject.toml  requirements_dev.txt  requirements_example.txt  requirements_examples.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: CI-checks.yml  checks.yaml  test.yml  tests.yaml
examples/: example-full-named-entity-evaluation.ipynb  example_no_loader.py  run_example.sh
nervaluate/: CONLL.py  __init__.py  __version__.py  cli.py  evaluate.py  nervaluate.py  nervaluate_cli.py  utils.py
src/nervaluate/: __init__.py  entities.py  evaluate.py  evaluation_strategies.py  evaluator.py  loaders.py  nervaluate.py  reporting.py  strategies.py  utils.py
tests/: __init__.py  test_entities.py  test_evaluate.py  test_evaluation_strategies.py  test_evaluator.py  test_evaluator_conll.py  test_evaluator_list.py  test_evaluator_new.py  test_evaluator_prodigy.py  test_loaders.py  test_nervaluate.py  test_nervaluate_cli.py  test_reporting.py  test_strategies.py  test_utils.py
