[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nervaluate"
version = "0.2.0"
authors = [
    { name="David S. Batista"},
    { name="Matthew Upson"}
]
description = "NER evaluation considering partial match scoring"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["named-entity-recognition", "ner", "evaluation-metrics", "partial-match-scoring", "nlp"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.dependencies]
pandas = "==2.2.1"

[project.urls]
"Homepage" = "https://github.com/MantisAI/nervaluate"
"Bug Tracker" = "https://github.com/MantisAI/nervaluate/issues"
