[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nervaluate"
version = "0.2.0"
authors = [
    { name="David S. Batista"},
    { name="Matthew Upson"}
]
description = "NER evaluation considering partial match scoring"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["named-entity-recognition", "ner", "evaluation-metrics", "partial-match-scoring", "nlp"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]


[project.dependencies]
pandas = "==2.2.3"


[project.optional-dependencies]
dev = [
    "black==24.3.0",
    "coverage==7.2.5",
    "flake8==6.0.0",
    "gitchangelog",
    "mypy==1.3.0",
    "pre-commit==3.3.1",
    "pylint==2.17.4",
    "pytest==7.3.1",
]


[project.urls]
"Homepage" = "https://github.com/MantisAI/nervaluate"
"Bug Tracker" = "https://github.com/MantisAI/nervaluate/issues"
